# FileAutomation

./: .codacy.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.zh-CN.yaml  .readthedocs.zh-TW.yaml  CLAUDE.md  README.md  README.zh-CN.md  README.zh-TW.md  dev.toml  dev_requirements.txt  main_ui.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  stable.toml
.circleci/: config.yml
.github/workflows/: ci-dev.yml  ci-stable.yml  file_automation_dev.yml  file_automation_dev_python3_10.yml  file_automation_stable.yml  (+10 more)
architecture_diagram/: FileAutomation.drawio
automation_file/: __init__.py  __main__.py  exceptions.py  logging_config.py
docs/: Makefile  make.bat  requirements.txt
file_automation/: __init__.py  __main__.py
tests/: .pylintrc  _insecure_fixtures.py  conftest.py  test_action_acl.py  test_action_executor.py  test_action_queue.py  test_action_registry.py  test_archive_ops.py  test_audit.py  test_backends.py  test_box_ops.py  test_callback_executor.py  test_checksum.py  test_circuit_breaker.py  test_cli_main.py  test_conditional.py  test_config.py  test_config_watcher.py  test_content_store.py  test_cross_backend.py  test_crypto.py  test_dag_executor.py  test_data_ops.py  test_data_ops_yaml_parquet.py  test_deduplicate.py  test_diff_ops.py  test_dir_ops.py  test_executor_extras.py  test_facade.py  test_fast_find.py  test_file_discovery.py  test_file_lock.py  test_file_ops.py  test_fim.py  test_fsspec_bridge.py  test_ftp_ops.py  test_grep.py  test_http_client.py  test_http_download_resume.py  test_http_server.py  (+41 more)
(+310 files in other folders)
