# Rename to dev version
# This is dev version
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation_file"
version = "0.0.10"
authors = [
    { name = "JE-Chen", email = "zenmailman@gmail.com" },
]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "APScheduler"
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/JE-Chen/Integration-testing-environment"

[tool.setuptools.packages]
find = { namespaces = false }